@@ -2,6 +2,10 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-08-21:
+
+- Fixed a corner-case crashing bug in shell discipline functions.
+
 2024-08-19:
 
 - Fixed a corner-case bug: for an empty set of positional parameters,
